--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "29968878",
+   "id": "8378c474",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f889bdd",
+   "id": "f019b0c1",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "154ad82f",
+   "id": "bfd73198",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "555418e9",
+   "id": "62b97172",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfa4d06c",
+   "id": "ba045172",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16a1d5ec",
+   "id": "0f755a05",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "53658a98",
+   "id": "513bea1c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:55:31.565405Z",
-     "iopub.status.busy": "2024-10-15T10:55:31.565222Z",
-     "iopub.status.idle": "2024-10-15T10:55:36.066234Z",
-     "shell.execute_reply": "2024-10-15T10:55:36.065624Z"
+     "iopub.execute_input": "2024-10-17T11:20:02.832620Z",
+     "iopub.status.busy": "2024-10-17T11:20:02.832434Z",
+     "iopub.status.idle": "2024-10-17T11:20:07.097843Z",
+     "shell.execute_reply": "2024-10-17T11:20:07.097229Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0d71ddb",
+   "id": "6e50d473",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f779080",
+   "id": "e8d5ff59",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17d416f0",
+   "id": "4949b2c6",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19d100f4",
+   "id": "d8c9b0f8",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf816e72",
+   "id": "91373228",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a859374e",
+   "id": "920500e0",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef3c1247",
+   "id": "5ebaac53",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "834889ac",
+   "id": "c9f65feb",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "56f91482",
+   "id": "f6495e93",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:55:36.068726Z",
-     "iopub.status.busy": "2024-10-15T10:55:36.068208Z",
-     "iopub.status.idle": "2024-10-15T10:55:38.118108Z",
-     "shell.execute_reply": "2024-10-15T10:55:38.117470Z"
+     "iopub.execute_input": "2024-10-17T11:20:07.100222Z",
+     "iopub.status.busy": "2024-10-17T11:20:07.099775Z",
+     "iopub.status.idle": "2024-10-17T11:20:08.962212Z",
+     "shell.execute_reply": "2024-10-17T11:20:08.961650Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "521b8932",
+   "id": "5ddfdcaa",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "af2b58af",
+   "id": "d372afd5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:55:38.120445Z",
-     "iopub.status.busy": "2024-10-15T10:55:38.119990Z",
-     "iopub.status.idle": "2024-10-15T10:55:38.123757Z",
-     "shell.execute_reply": "2024-10-15T10:55:38.123136Z"
+     "iopub.execute_input": "2024-10-17T11:20:08.964500Z",
+     "iopub.status.busy": "2024-10-17T11:20:08.964003Z",
+     "iopub.status.idle": "2024-10-17T11:20:08.967784Z",
+     "shell.execute_reply": "2024-10-17T11:20:08.967198Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ee15318",
+   "id": "fcba163d",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91cd081e",
+   "id": "bce1fc9e",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2248cff",
+   "id": "ffa5fe1e",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61b2ace2",
+   "id": "2a58b3ba",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c2375c10",
+   "id": "6eb15c3a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:55:38.125651Z",
-     "iopub.status.busy": "2024-10-15T10:55:38.125310Z",
-     "iopub.status.idle": "2024-10-15T10:55:38.172083Z",
-     "shell.execute_reply": "2024-10-15T10:55:38.171507Z"
+     "iopub.execute_input": "2024-10-17T11:20:08.969856Z",
+     "iopub.status.busy": "2024-10-17T11:20:08.969317Z",
+     "iopub.status.idle": "2024-10-17T11:20:09.013754Z",
+     "shell.execute_reply": "2024-10-17T11:20:09.013157Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db9de4d0",
+   "id": "367e1eae",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f79833ef",
+   "id": "b1fdb9ac",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:55:38.174237Z",
-     "iopub.status.busy": "2024-10-15T10:55:38.173865Z",
-     "iopub.status.idle": "2024-10-15T10:55:38.242731Z",
-     "shell.execute_reply": "2024-10-15T10:55:38.242161Z"
+     "iopub.execute_input": "2024-10-17T11:20:09.015813Z",
+     "iopub.status.busy": "2024-10-17T11:20:09.015465Z",
+     "iopub.status.idle": "2024-10-17T11:20:09.082847Z",
+     "shell.execute_reply": "2024-10-17T11:20:09.082272Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f199ceb5",
+   "id": "4d573ff4",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fba2f8f",
+   "id": "03a43c89",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "55dcca3c",
+   "id": "244ea433",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:55:38.244839Z",
-     "iopub.status.busy": "2024-10-15T10:55:38.244345Z",
-     "iopub.status.idle": "2024-10-15T10:55:38.274549Z",
-     "shell.execute_reply": "2024-10-15T10:55:38.273917Z"
+     "iopub.execute_input": "2024-10-17T11:20:09.085201Z",
+     "iopub.status.busy": "2024-10-17T11:20:09.084712Z",
+     "iopub.status.idle": "2024-10-17T11:20:09.113229Z",
+     "shell.execute_reply": "2024-10-17T11:20:09.112705Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b075861f",
+   "id": "78d8652a",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8e97866",
+   "id": "b8a5dfc5",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3878686c",
+   "id": "02e2826f",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a73dbee0",
+   "id": "87d1f53e",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f6cc59f",
+   "id": "954d14da",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e506e0f5",
+   "id": "33073803",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:55:38.276736Z",
-     "iopub.status.busy": "2024-10-15T10:55:38.276281Z",
-     "iopub.status.idle": "2024-10-15T10:55:38.280510Z",
-     "shell.execute_reply": "2024-10-15T10:55:38.279938Z"
+     "iopub.execute_input": "2024-10-17T11:20:09.115248Z",
+     "iopub.status.busy": "2024-10-17T11:20:09.114904Z",
+     "iopub.status.idle": "2024-10-17T11:20:09.118990Z",
+     "shell.execute_reply": "2024-10-17T11:20:09.118454Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c74d268c",
+   "id": "4de5b331",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d793dfd7",
+   "id": "c524ea9b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:55:38.282425Z",
-     "iopub.status.busy": "2024-10-15T10:55:38.282104Z",
-     "iopub.status.idle": "2024-10-15T10:55:38.285090Z",
-     "shell.execute_reply": "2024-10-15T10:55:38.284439Z"
+     "iopub.execute_input": "2024-10-17T11:20:09.120890Z",
+     "iopub.status.busy": "2024-10-17T11:20:09.120552Z",
+     "iopub.status.idle": "2024-10-17T11:20:09.123522Z",
+     "shell.execute_reply": "2024-10-17T11:20:09.122913Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeb90b72",
+   "id": "2ed3d099",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9bc7c955",
+   "id": "b8475593",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:55:38.286812Z",
-     "iopub.status.busy": "2024-10-15T10:55:38.286495Z",
-     "iopub.status.idle": "2024-10-15T10:55:40.943074Z",
-     "shell.execute_reply": "2024-10-15T10:55:40.942470Z"
+     "iopub.execute_input": "2024-10-17T11:20:09.125247Z",
+     "iopub.status.busy": "2024-10-17T11:20:09.125064Z",
+     "iopub.status.idle": "2024-10-17T11:20:11.707762Z",
+     "shell.execute_reply": "2024-10-17T11:20:11.707099Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "930ecb5b",
+   "id": "e6d99217",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbdeaf68",
+   "id": "4c7bfe57",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c3f2abd",
+   "id": "44c2222e",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42ca5ccc",
+   "id": "978b77bb",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cc3202af",
+   "id": "ee5147a3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:55:40.945397Z",
-     "iopub.status.busy": "2024-10-15T10:55:40.944974Z",
-     "iopub.status.idle": "2024-10-15T10:55:40.949272Z",
-     "shell.execute_reply": "2024-10-15T10:55:40.948552Z"
+     "iopub.execute_input": "2024-10-17T11:20:11.709990Z",
+     "iopub.status.busy": "2024-10-17T11:20:11.709493Z",
+     "iopub.status.idle": "2024-10-17T11:20:11.713687Z",
+     "shell.execute_reply": "2024-10-17T11:20:11.713180Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f16491a9940>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f5ef7f6e160>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86740574",
+   "id": "ff317aab",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27aab81c",
+   "id": "50910ee4",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "577dbfb0",
+   "id": "154b23f4",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4fab34d",
+   "id": "89e96e59",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c8734632",
+   "id": "bbadcb6d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:55:40.951416Z",
-     "iopub.status.busy": "2024-10-15T10:55:40.950998Z",
-     "iopub.status.idle": "2024-10-15T10:55:40.954452Z",
-     "shell.execute_reply": "2024-10-15T10:55:40.953966Z"
+     "iopub.execute_input": "2024-10-17T11:20:11.715710Z",
+     "iopub.status.busy": "2024-10-17T11:20:11.715332Z",
+     "iopub.status.idle": "2024-10-17T11:20:11.718391Z",
+     "shell.execute_reply": "2024-10-17T11:20:11.717894Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3f8938da",
+   "id": "2684e075",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:55:40.956199Z",
-     "iopub.status.busy": "2024-10-15T10:55:40.955845Z",
-     "iopub.status.idle": "2024-10-15T10:55:42.056492Z",
-     "shell.execute_reply": "2024-10-15T10:55:42.055883Z"
+     "iopub.execute_input": "2024-10-17T11:20:11.720246Z",
+     "iopub.status.busy": "2024-10-17T11:20:11.719901Z",
+     "iopub.status.idle": "2024-10-17T11:20:12.810997Z",
+     "shell.execute_reply": "2024-10-17T11:20:12.810344Z"
     }
    },
    "outputs": [
