--- a/tutorials/la_lindblad.ipynb
+++ b/tutorials/la_lindblad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "148438a9",
+   "id": "6b07b555",
    "metadata": {},
    "source": [
     "# Dissipation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e48cc795",
+   "id": "fd751beb",
    "metadata": {},
    "source": [
     "GRANAD supports two dissipation models: A phenomenological dissipator, given by"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98f871a4",
+   "id": "87c198f8",
    "metadata": {},
    "source": [
     "$$\\mathcal{D}[\\rho - \\rho_0] = \\frac{-1}{\\tau} (\\rho - \\rho_0)$$"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9858de9",
+   "id": "efdb9c41",
    "metadata": {},
    "source": [
     "where $\\rho_0$ is the equilibrium density matrix and $1 / \\tau$ a phenomenological relaxation rate."
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f8c139b",
+   "id": "65acd176",
    "metadata": {},
    "source": [
     "To model dissipation in greater depth, GRANAD makes available also a Lindblad dissipation model. The mathematical details are laid out in [Pelc et al., 2024](https://link.aps.org/doi/10.1103/PhysRevA.109.022237) and revolve around the following equation"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "101c2442",
+   "id": "3e26ab1d",
    "metadata": {},
    "source": [
     "$$\\gamma_{ij}(t) = \\gamma_{ij} \\cdot f(\\rho(t))$$"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ab5ae9d",
+   "id": "c52cd139",
    "metadata": {},
    "source": [
     "where $\\gamma_{ij}$ is the transition rate from state i to state j and $f$ is a relaxation functional to counteract problems related to the Pauli principle breaking that might occur in the single-particle model.\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "377a92e8",
+   "id": "57a7145e",
    "metadata": {},
    "source": [
     "$$f(x) = \\frac{1}{1 + e^{\\beta \\cdot(2 - x)}}$$"
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "644c48ab",
+   "id": "37dfd803",
    "metadata": {},
    "source": [
     "where x is the occupation and $\\beta$ a temperature-like control parameter to mimick a smooth Heaviside function, defaulting to 1e-6."
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bc8b54e",
+   "id": "5ecba710",
    "metadata": {},
    "source": [
     "## Lindblad vs Phenomenological Relaxation dynamics of the Metallic Chain"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b34cd0aa",
+   "id": "007a4613",
    "metadata": {},
    "source": [
     "In the following, we will consider a metallic chain with a uniform transition rate, such that of $\\gamma_{ij} = \\gamma$ for all $i \\gt j$. We consider an initially excited state of one electron in the HOMO-LUMO+1 transition."
@@ -92,13 +92,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ff5af09a",
+   "id": "4c97f30e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:57:03.020361Z",
-     "iopub.status.busy": "2024-10-15T10:57:03.020166Z",
-     "iopub.status.idle": "2024-10-15T10:57:08.084516Z",
-     "shell.execute_reply": "2024-10-15T10:57:08.083917Z"
+     "iopub.execute_input": "2024-10-17T11:21:29.540329Z",
+     "iopub.status.busy": "2024-10-17T11:21:29.540141Z",
+     "iopub.status.idle": "2024-10-17T11:21:34.156261Z",
+     "shell.execute_reply": "2024-10-17T11:21:34.155652Z"
     }
    },
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "811385b5",
+   "id": "5752fecf",
    "metadata": {},
    "source": [
     "We can now build the matrix of transition rates with a uniform $\\gamma = 10$ as follows"
@@ -132,13 +132,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3e13eed7",
+   "id": "4afbb58c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:57:08.086507Z",
-     "iopub.status.busy": "2024-10-15T10:57:08.086128Z",
-     "iopub.status.idle": "2024-10-15T10:57:08.140885Z",
-     "shell.execute_reply": "2024-10-15T10:57:08.140368Z"
+     "iopub.execute_input": "2024-10-17T11:21:34.158398Z",
+     "iopub.status.busy": "2024-10-17T11:21:34.158033Z",
+     "iopub.status.idle": "2024-10-17T11:21:34.210814Z",
+     "shell.execute_reply": "2024-10-17T11:21:34.210198Z"
     }
    },
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "748c3864",
+   "id": "a5094fb7",
    "metadata": {},
    "source": [
     "We can inspect the lumo-homo transition rate, for example, as"
@@ -159,13 +159,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f077b369",
+   "id": "d63eb956",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:57:08.143043Z",
-     "iopub.status.busy": "2024-10-15T10:57:08.142751Z",
-     "iopub.status.idle": "2024-10-15T10:57:08.171480Z",
-     "shell.execute_reply": "2024-10-15T10:57:08.170964Z"
+     "iopub.execute_input": "2024-10-17T11:21:34.213189Z",
+     "iopub.status.busy": "2024-10-17T11:21:34.212823Z",
+     "iopub.status.idle": "2024-10-17T11:21:34.240871Z",
+     "shell.execute_reply": "2024-10-17T11:21:34.240348Z"
     }
    },
    "outputs": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8d44a7d",
+   "id": "398fa815",
    "metadata": {},
    "source": [
     "GRANAD dispatches the non-Hermitian functional depending on the `relaxation_rate` input type. If you pass a float, GRANAD uses the decoherence approximation. If you pass an array, it uses the Lindblad dissipator with a (smooth approximation of) the Heaviside function as the saturation functional. Modifications of the relaxation functional are discussed below."
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbdeaade",
+   "id": "93604d4d",
    "metadata": {},
    "source": [
     "We now integrate the master equation. "
@@ -200,13 +200,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "671bc13f",
+   "id": "f1309795",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:57:08.173614Z",
-     "iopub.status.busy": "2024-10-15T10:57:08.173263Z",
-     "iopub.status.idle": "2024-10-15T10:57:09.791242Z",
-     "shell.execute_reply": "2024-10-15T10:57:09.790641Z"
+     "iopub.execute_input": "2024-10-17T11:21:34.242860Z",
+     "iopub.status.busy": "2024-10-17T11:21:34.242432Z",
+     "iopub.status.idle": "2024-10-17T11:21:35.816235Z",
+     "shell.execute_reply": "2024-10-17T11:21:35.815673Z"
     }
    },
    "outputs": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "935e7f0c",
+   "id": "eb2d615d",
    "metadata": {},
    "source": [
     "We plot the changes in single-particle energy occupations as a function of time by defining the `plot_labels` argument as the energies"
@@ -244,13 +244,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b2c5ae57",
+   "id": "c909fbe8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:57:09.793655Z",
-     "iopub.status.busy": "2024-10-15T10:57:09.793135Z",
-     "iopub.status.idle": "2024-10-15T10:57:10.201012Z",
-     "shell.execute_reply": "2024-10-15T10:57:10.200342Z"
+     "iopub.execute_input": "2024-10-17T11:21:35.818351Z",
+     "iopub.status.busy": "2024-10-17T11:21:35.817986Z",
+     "iopub.status.idle": "2024-10-17T11:21:36.212055Z",
+     "shell.execute_reply": "2024-10-17T11:21:36.211472Z"
     }
    },
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "198edab4",
+   "id": "05c667ee",
    "metadata": {},
    "source": [
     "A comparison to to the phenomenological approach can be obtained by"
@@ -281,13 +281,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "abe4dd41",
+   "id": "18a8c7ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:57:10.203255Z",
-     "iopub.status.busy": "2024-10-15T10:57:10.202932Z",
-     "iopub.status.idle": "2024-10-15T10:57:11.200015Z",
-     "shell.execute_reply": "2024-10-15T10:57:11.199491Z"
+     "iopub.execute_input": "2024-10-17T11:21:36.214165Z",
+     "iopub.status.busy": "2024-10-17T11:21:36.213781Z",
+     "iopub.status.idle": "2024-10-17T11:21:37.234457Z",
+     "shell.execute_reply": "2024-10-17T11:21:37.233834Z"
     }
    },
    "outputs": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60be1b23",
+   "id": "eb32d189",
    "metadata": {},
    "source": [
     "By comparing the two plots above, we observe a set of qualitative differences, discussed in greater detail in the [corresponding paper](https://link.aps.org/doi/10.1103/PhysRevA.109.022237)."
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c59854d1",
+   "id": "55c69669",
    "metadata": {},
    "source": [
     "GRANAD imposes a degeneracy tolerance on the states. This means that all states separated by less than a numerical threshold are considered degenerate. The threshold is specified as variable `flake.params.eps`."
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6350b13",
+   "id": "74736e9d",
    "metadata": {},
    "source": [
     "## Modifying the saturation functional"
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed59e076",
+   "id": "3f7b7fc5",
    "metadata": {},
    "source": [
     "The saturation functional can be customized by defining a saturation function and modifying the dissipator dict (for more information, please consult the tutorial on custom time evolution)."
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9179b223",
+   "id": "28344bd9",
    "metadata": {},
    "source": [
     "1. initialize a dissipator with your custom relaxation functional\n",
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d85e96f",
+   "id": "ad15f5af",
    "metadata": {},
    "source": [
     "To illustrate the necessity of introducing a saturation functional, we consider the case where no saturation is applied, i.e. $f(x) = 1$"
@@ -377,13 +377,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "697dcba7",
+   "id": "abb2b995",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:57:11.202246Z",
-     "iopub.status.busy": "2024-10-15T10:57:11.201889Z",
-     "iopub.status.idle": "2024-10-15T10:57:13.392640Z",
-     "shell.execute_reply": "2024-10-15T10:57:13.392113Z"
+     "iopub.execute_input": "2024-10-17T11:21:37.236606Z",
+     "iopub.status.busy": "2024-10-17T11:21:37.236277Z",
+     "iopub.status.idle": "2024-10-17T11:21:39.342699Z",
+     "shell.execute_reply": "2024-10-17T11:21:39.342109Z"
     }
    },
    "outputs": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7e13f96",
+   "id": "7d9e4150",
    "metadata": {},
    "source": [
     "We observe an almost complete collapse into the single-particle ground state, which can be revealed to be an Coulomb interaction effect."
@@ -439,13 +439,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "273a448f",
+   "id": "78b2b6a2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:57:13.394923Z",
-     "iopub.status.busy": "2024-10-15T10:57:13.394326Z",
-     "iopub.status.idle": "2024-10-15T10:57:14.484424Z",
-     "shell.execute_reply": "2024-10-15T10:57:14.483916Z"
+     "iopub.execute_input": "2024-10-17T11:21:39.344845Z",
+     "iopub.status.busy": "2024-10-17T11:21:39.344474Z",
+     "iopub.status.idle": "2024-10-17T11:21:40.420297Z",
+     "shell.execute_reply": "2024-10-17T11:21:40.419782Z"
     }
    },
    "outputs": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aff4c852",
+   "id": "de819763",
    "metadata": {},
    "source": [
     "## Wigner-Weisskopf transition rates"
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8db1793d",
+   "id": "04577b73",
    "metadata": {},
    "source": [
     "GRANAD offers the single-particle Wigner-Weisskopf transition rates directly in a matrix form "
@@ -504,13 +504,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d7bc7f84",
+   "id": "cf21ecd7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:57:14.486595Z",
-     "iopub.status.busy": "2024-10-15T10:57:14.486208Z",
-     "iopub.status.idle": "2024-10-15T10:57:14.777492Z",
-     "shell.execute_reply": "2024-10-15T10:57:14.776735Z"
+     "iopub.execute_input": "2024-10-17T11:21:40.422298Z",
+     "iopub.status.busy": "2024-10-17T11:21:40.421916Z",
+     "iopub.status.idle": "2024-10-17T11:21:40.758841Z",
+     "shell.execute_reply": "2024-10-17T11:21:40.758185Z"
     }
    },
    "outputs": [
@@ -528,7 +528,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "gamma_matrix = flake.wigner_weisskopf_transition_rates\n",
-    "plt.matshow(gamma_matrix.real)\n",
+    "plt.matshow(gamma_matrix)\n",
     "plt.colorbar()\n",
     "plt.show()"
    ]
